解决newblog.html无法提交博客问题 解决审核跳转预览页面时id为undefined问题 把审核相关文件名改名成auditBlog.html和auditBlog.js 审核时点击预览不会增加博客的点击数